experimental/ir/testdata/options/target.proto.stderr.txt
error: unsupported option target for `range`
   --> testdata/options/target.proto:22:15
    |
 22 | option (file).range = true;
    |               ^^^^^ option set here
 23 | option (file).message = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:23:15
    |
 23 | option (file).message = true;
    |               ^^^^^^^ option set here
 24 | option (file).field = true;
 ...
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:24:15
    |
 24 | option (file).field = true;
    |               ^^^^^ option set here
 25 | option (file).oneof = true;
 ...
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:25:15
    |
 25 | option (file).oneof = true;
    |               ^^^^^ option set here
 26 | option (file).enum = true;
 ...
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:26:15
    |
 26 | option (file).enum = true;
    |               ^^^^ option set here
 27 | option (file).value = true;
 ...
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:27:15
    |
 27 | option (file).value = true;
    |               ^^^^^ option set here
 28 | option (file).service = true;
 ...
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:28:15
    |
 28 | option (file).service = true;
    |               ^^^^^^^ option set here
 29 | option (file).method = true;
 ...
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:29:15
    |
 29 | option (file).method = true;
    |               ^^^^^^ option set here
 ...
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
125 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:32:22
    |
 31 | message M {
    |         - applied to this
 32 |     option (message).file = true;
    |                      ^^^^ option set here
 33 |     option (message).range = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:33:22
    |
 31 | message M {
    |         - applied to this
 32 |     option (message).file = true;
 33 |     option (message).range = true;
    |                      ^^^^^ option set here
 34 |     option (message).message = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `field`
   --> testdata/options/target.proto:35:22
    |
 31 | message M {
    |         - applied to this
 ...
 34 |     option (message).message = true;
 35 |     option (message).field = true;
    |                      ^^^^^ option set here
 36 |     option (message).oneof = true;
 ...
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:36:22
    |
 31 | message M {
    |         - applied to this
 ...
 35 |     option (message).field = true;
 36 |     option (message).oneof = true;
    |                      ^^^^^ option set here
 37 |     option (message).enum = true;
 ...
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:37:22
    |
 31 | message M {
    |         - applied to this
 ...
 36 |     option (message).oneof = true;
 37 |     option (message).enum = true;
    |                      ^^^^ option set here
 38 |     option (message).value = true;
 ...
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:38:22
    |
 31 | message M {
    |         - applied to this
 ...
 37 |     option (message).enum = true;
 38 |     option (message).value = true;
    |                      ^^^^^ option set here
 39 |     option (message).service = true;
 ...
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:39:22
    |
 31 | message M {
    |         - applied to this
 ...
 38 |     option (message).value = true;
 39 |     option (message).service = true;
    |                      ^^^^^^^ option set here
 40 |     option (message).method = true;
 ...
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:40:22
    |
 31 | message M {
    |         - applied to this
 ...
 39 |     option (message).service = true;
 40 |     option (message).method = true;
    |                      ^^^^^^ option set here
 ...
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
125 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:43:9
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 43 |         file: true
    |         ^^^^ option set here
 44 |         range: true
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:44:9
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 43 |         file: true
 44 |         range: true
    |         ^^^^^ option set here
 45 |         message: true, field: true, oneof: true
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:45:9
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 43 |         file: true
 44 |         range: true
 45 |         message: true, field: true, oneof: true
    |         ^^^^^^^ option set here
 46 |         enum: true, value: true
 ...
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:45:37
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 43 |         file: true
 44 |         range: true
 45 |         message: true, field: true, oneof: true
    |                                     ^^^^^ option set here
 46 |         enum: true, value: true
 ...
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:46:9
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 45 |         message: true, field: true, oneof: true
 46 |         enum: true, value: true
    |         ^^^^ option set here
 47 |         service: true, method: true
 ...
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:46:21
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 45 |         message: true, field: true, oneof: true
 46 |         enum: true, value: true
    |                     ^^^^^ option set here
 47 |         service: true, method: true
 ...
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:47:9
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 46 |         enum: true, value: true
 47 |         service: true, method: true
    |         ^^^^^^^ option set here
 ...
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:47:24
    |
 42 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 46 |         enum: true, value: true
 47 |         service: true, method: true
    |                        ^^^^^^ option set here
 ...
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
125 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:59:24
    |
 58 |     oneof y {
    |           - applied to this
 59 |         option (oneof).file = true;
    |                        ^^^^ option set here
 60 |         option (oneof).range = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:60:24
    |
 58 |     oneof y {
    |           - applied to this
 59 |         option (oneof).file = true;
 60 |         option (oneof).range = true;
    |                        ^^^^^ option set here
 61 |         option (oneof).message = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:61:24
    |
 58 |     oneof y {
    |           - applied to this
 59 |         option (oneof).file = true;
 60 |         option (oneof).range = true;
 61 |         option (oneof).message = true;
    |                        ^^^^^^^ option set here
 62 |         option (oneof).field = true;
 ...
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:62:24
    |
 58 |     oneof y {
    |           - applied to this
 ...
 61 |         option (oneof).message = true;
 62 |         option (oneof).field = true;
    |                        ^^^^^ option set here
 63 |         option (oneof).oneof = true;
 ...
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `enum`
   --> testdata/options/target.proto:64:24
    |
 58 |     oneof y {
    |           - applied to this
 ...
 63 |         option (oneof).oneof = true;
 64 |         option (oneof).enum = true;
    |                        ^^^^ option set here
 65 |         option (oneof).value = true;
 ...
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:65:24
    |
 58 |     oneof y {
    |           - applied to this
 ...
 64 |         option (oneof).enum = true;
 65 |         option (oneof).value = true;
    |                        ^^^^^ option set here
 66 |         option (oneof).service = true;
 ...
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:66:24
    |
 58 |     oneof y {
    |           - applied to this
 ...
 65 |         option (oneof).value = true;
 66 |         option (oneof).service = true;
    |                        ^^^^^^^ option set here
 67 |         option (oneof).method = true;
 ...
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:67:24
    |
 58 |     oneof y {
    |           - applied to this
 ...
 66 |         option (oneof).service = true;
 67 |         option (oneof).method = true;
    |                        ^^^^^^ option set here
 68 |         int32 z = 3;
 ...
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
125 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:73:19
    |
 72 | enum E {
    |      - applied to this
 73 |     option (enum).file = true;
    |                   ^^^^ option set here
 74 |     option (enum).range = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:74:19
    |
 72 | enum E {
    |      - applied to this
 73 |     option (enum).file = true;
 74 |     option (enum).range = true;
    |                   ^^^^^ option set here
 75 |     option (enum).message = true;
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:75:19
    |
 72 | enum E {
    |      - applied to this
 73 |     option (enum).file = true;
 74 |     option (enum).range = true;
 75 |     option (enum).message = true;
    |                   ^^^^^^^ option set here
 76 |     option (enum).field = true;
 ...
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:76:19
    |
 72 | enum E {
    |      - applied to this
 ...
 75 |     option (enum).message = true;
 76 |     option (enum).field = true;
    |                   ^^^^^ option set here
 77 |     option (enum).oneof = true;
 ...
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:77:19
    |
 72 | enum E {
    |      - applied to this
 ...
 76 |     option (enum).field = true;
 77 |     option (enum).oneof = true;
    |                   ^^^^^ option set here
 78 |     option (enum).enum = true;
 ...
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:79:19
    |
 72 | enum E {
    |      - applied to this
 ...
 78 |     option (enum).enum = true;
 79 |     option (enum).value = true;
    |                   ^^^^^ option set here
 80 |     option (enum).service = true;
 ...
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:80:19
    |
 72 | enum E {
    |      - applied to this
 ...
 79 |     option (enum).value = true;
 80 |     option (enum).service = true;
    |                   ^^^^^^^ option set here
 81 |     option (enum).method = true;
 ...
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:81:19
    |
 72 | enum E {
    |      - applied to this
 ...
 80 |     option (enum).service = true;
 81 |     option (enum).method = true;
    |                   ^^^^^^ option set here
 ...
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
125 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:84:9
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 84 |         file: true
    |         ^^^^ option set here
 85 |         range: true
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:85:9
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 84 |         file: true
 85 |         range: true
    |         ^^^^^ option set here
 86 |         message: true, field: true, oneof: true
 ...
117 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:86:9
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 84 |         file: true
 85 |         range: true
 86 |         message: true, field: true, oneof: true
    |         ^^^^^^^ option set here
 87 |         enum: true, value: true
 ...
118 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:86:24
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 84 |         file: true
 85 |         range: true
 86 |         message: true, field: true, oneof: true
    |                        ^^^^^ option set here
 87 |         enum: true, value: true
 ...
119 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:86:37
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 84 |         file: true
 85 |         range: true
 86 |         message: true, field: true, oneof: true
    |                                     ^^^^^ option set here
 87 |         enum: true, value: true
 ...
120 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:87:9
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 ...
 86 |         message: true, field: true, oneof: true
 87 |         enum: true, value: true
    |         ^^^^ option set here
 88 |         service: true, method: true
 ...
121 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
122 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `service`
   --> testdata/options/target.proto:88:9
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 ...
 87 |         enum: true, value: true
 88 |         service: true, method: true
    |         ^^^^^^^ option set here
 ...
123 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:88:24
    |
 83 |     X = 1 [(value) = {
    |     - applied to this
 ...
 87 |         enum: true, value: true
 88 |         service: true, method: true
    |                        ^^^^^^ option set here
 ...
124 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
125 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

encountered 48 errors
